corecoes  de jogabilidade

--- a/index.html
+++ b/index.html
@@ -84,24 +84,22 @@
         </div>
 
         <!-- Direcao do chute -->
-        <div class="player">
+        <div class="player"  >
             <div id="baliza">
-
-            </div>
             <div id="bola">
-                
+                <input type="text" id="chuteinput">
             </div>
             <div id="container-comandos">
-                <div id="esquerda" onclick="esquerda()" onkeydown="pressionar()">
+                <div id="esquerda" onclick="esquerda()">
                     <i class="bi bi-caret-left-fill"></i>
                 </div>
-                <div id="cima" onclick="cima()" onkeydown="pressionar()">
+                <div id="cima" onclick="cima()">
                     <i class="bi bi-caret-up-fill"></i>
                 </div>
-                <div id="baixo" onclick="baixo()" onkeydown="pressionar()">
+                <div id="baixo" onclick="baixo()">
                     <i class="bi bi-caret-down-fill"></i>
                 </div>
-                <div id="direita" onclick="direita()" onkeydown="pressionar()">
+                <div id="direita" onclick="direita()">
                     <i class="bi bi-caret-right-fill"></i>
                 </div>
             </div>
